--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GamePlayUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GamePlayUI.xaml
@@ -22,19 +22,24 @@
 			<TextBlock x:Name="Title" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Title" VerticalAlignment="Center" Margin="8,0,0,0" FontSize="26.667" Foreground="White" FontWeight="Bold"/>
 		</Grid>
 		<Grid Margin="0,40,0,0">
-			<TextBlock x:Name="GameTime" TextWrapping="Wrap" Text="GameTime" VerticalAlignment="Top" FontSize="21.333" Margin="8,8,8,0" FontWeight="Bold" TextAlignment="Center"/>
-			<Grid Margin="150,64,150,226">
-				<Rectangle Fill="#FFEBEBEB" RadiusY="4" RadiusX="4" Stroke="Black"/>
-				<Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-					<TextBlock x:Name="Winner" TextWrapping="Wrap" Text="Winner" FontSize="16" Margin="72,0,71,20" d:LayoutOverrides="Width, Height"/>
-					<TextBlock x:Name="WinnerInformation" TextWrapping="Wrap" Text="WinnerInformation" TextAlignment="Center" VerticalAlignment="Bottom"/>
-				</Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="0.156*"/>
+				<RowDefinition Height="0.489*"/>
+				<RowDefinition Height="0.356*"/>
+			</Grid.RowDefinitions>
+			<TextBlock x:Name="GameTime" TextWrapping="Wrap" Text="GameTime" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+				<Rectangle Fill="#FFEBEBEB" RadiusY="4" RadiusX="4" Stroke="Black" VerticalAlignment="Center" Height="45"/>
+				<StackPanel VerticalAlignment="Center">
+					<TextBlock x:Name="Winner" TextWrapping="Wrap" Text="Winner" FontSize="16" Margin="72,0,71,0" d:LayoutOverrides="Width" VerticalAlignment="Top" HorizontalAlignment="Center"/>
+					<TextBlock x:Name="WinnerInformation" TextWrapping="Wrap" Text="WinnerInformation" TextAlignment="Center"/>
+				</StackPanel>
 			</Grid>
-			<Grid HorizontalAlignment="Left" Margin="100,194,0,100" Width="147">
+			<Grid HorizontalAlignment="Left" Width="147" Grid.Row="2" VerticalAlignment="Top" Margin="95,0,0,0">
 				<Button x:Name="BetBlack" Content="Black" Margin="0,0,0,20" Height="46" VerticalAlignment="Bottom"/>
 				<TextBlock x:Name="TotalAmountOfBlack" TextWrapping="Wrap" Text="TotalAmountOfBlack" TextAlignment="Center" Margin="0,50,0,0" d:LayoutOverrides="Height" VerticalAlignment="Bottom"/>
 			</Grid>
-			<Grid HorizontalAlignment="Right" Margin="0,194,100,100" Width="147">
+			<Grid HorizontalAlignment="Right" Width="147" Grid.Row="2" Margin="0,0,95,0" VerticalAlignment="Top">
 				<Button x:Name="BetWhite" Content="White" Margin="0,0,0,20" VerticalAlignment="Bottom" Height="46"/>
 				<TextBlock x:Name="TotalAmountOfWhite" TextWrapping="Wrap" Text="TotalAmountOfWhite" TextAlignment="Center" Margin="0,50,0,0" d:LayoutOverrides="Height" VerticalAlignment="Bottom"/>
 			</Grid>
