--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -9,6 +9,7 @@
     <link href="../../Content/jquery-ui-1.8.1.custom.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/movies.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/jquery.hoverscroll-0.2.2.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/jquery.ui.dialog.css" rel="stylesheet" type="text/css" />
     <script src="../../Scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery-ui-1.8.1.custom.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery.pager.js" type="text/javascript"></script>
@@ -17,6 +18,7 @@
     <script src="../../Scripts/ajaxScripts/extended/ExtendedControls.debug.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery.hoverscroll-0.2.2.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <script src="../../Scripts/jquery-ui.min.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="page">
