--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GamePlayUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GamePlayUI.xaml
@@ -16,12 +16,16 @@
 	</UserControl.DataContext>
 
 	<Grid x:Name="LayoutRoot">
-		<Rectangle RadiusY="4" RadiusX="4" Stroke="Black"/>
-		<Grid Height="40" VerticalAlignment="Top">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="0.1*"/>
+			<RowDefinition Height="0.9*"/>
+		</Grid.RowDefinitions>
+		<Rectangle Stroke="Black" Grid.RowSpan="2"/>
+		<Grid>
 			<Rectangle Fill="Black" Stroke="Black"/>
-			<TextBlock x:Name="Title" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Title" VerticalAlignment="Center" Margin="8,0,0,0" FontSize="26.667" Foreground="White" FontWeight="Bold"/>
+			<TextBlock x:Name="Title" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Title" VerticalAlignment="Center" Margin="8,0,0,0" FontSize="21.333" Foreground="White" FontWeight="Bold"/>
 		</Grid>
-		<Grid Margin="0,40,0,0">
+		<Grid Grid.Row="1">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="0.156*"/>
 				<RowDefinition Height="0.489*"/>
@@ -35,11 +39,11 @@
 					<TextBlock x:Name="WinnerInformation" TextWrapping="Wrap" Text="WinnerInformation" TextAlignment="Center"/>
 				</StackPanel>
 			</Grid>
-			<Grid HorizontalAlignment="Left" Width="147" Grid.Row="2" VerticalAlignment="Top" Margin="95,0,0,0">
+			<Grid HorizontalAlignment="Left" Width="140" Grid.Row="2" VerticalAlignment="Top" Margin="95,0,0,0">
 				<Button x:Name="BetBlack" Content="Black" Margin="0,0,0,20" Height="46" VerticalAlignment="Bottom"/>
 				<TextBlock x:Name="TotalAmountOfBlack" TextWrapping="Wrap" Text="TotalAmountOfBlack" TextAlignment="Center" Margin="0,50,0,0" d:LayoutOverrides="Height" VerticalAlignment="Bottom"/>
 			</Grid>
-			<Grid HorizontalAlignment="Right" Width="147" Grid.Row="2" Margin="0,0,95,0" VerticalAlignment="Top">
+			<Grid HorizontalAlignment="Right" Width="140" Grid.Row="2" Margin="0,0,95,0" VerticalAlignment="Top">
 				<Button x:Name="BetWhite" Content="White" Margin="0,0,0,20" VerticalAlignment="Bottom" Height="46"/>
 				<TextBlock x:Name="TotalAmountOfWhite" TextWrapping="Wrap" Text="TotalAmountOfWhite" TextAlignment="Center" Margin="0,50,0,0" d:LayoutOverrides="Height" VerticalAlignment="Bottom"/>
 			</Grid>
