--- a/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/DevilSix/Controls/GameInformationsUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/DevilSix/Controls/GameInformationsUI.xaml
@@ -5,7 +5,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:TheS_Casinova_DevilSix="clr-namespace:TheS.Casinova.DevilSix" x:Class="TheS.Casinova.DevilSix.Controls.GameInformationsUI"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="500" Width="Auto" Height="Auto">
+    d:DesignHeight="400" d:DesignWidth="500" Width="Auto" Height="Auto">
     
 	<UserControl.Resources>
 		<TheS_Casinova_DevilSix:GameApplicationInformation x:Key="GameApplicationInformationDataSource" d:IsDataSource="True"/>
@@ -15,20 +15,29 @@
 	</UserControl.DataContext>
     
     <Grid x:Name="LayoutRoot" Background="White">
-    	<Rectangle Fill="#FFF4F4F5" Stroke="Black"/>
-    	<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name, Mode=OneWay}" Margin="8,0,0,172" FontWeight="Bold" FontSize="13.333" VerticalAlignment="Bottom"/>
-    	<Rectangle Stroke="Black" Margin="8,8,8,195">
-    		<Rectangle.Fill>
-    			<RadialGradientBrush>
-    				<GradientStop Color="White" Offset="0.638"/>
-    				<GradientStop Color="Black" Offset="1"/>
-    			</RadialGradientBrush>
-    		</Rectangle.Fill>
-    	</Rectangle>
-    	<HyperlinkButton Content="Play" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="170,0,0,8" Foreground="Red" NavigateUri="{Binding GameUri, Mode=OneWay}"/>
-    	<HyperlinkButton x:Name="HowToPlayHyperlinkButton" Content="How to play" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,170,8" Foreground="Red" Click="HowToPlayHyperlinkButton_Click" />
-    	<ScrollViewer Margin="8,0,8,28" Height="140" VerticalAlignment="Bottom">
-    		<TextBlock TextWrapping="Wrap" Text="The Devil (Greek: διάβολος or diávolos = 'slanderer' or 'accuser'[1]) is believed in many religions and cultures to be a powerful, supernatural entity that is the personification of evil and the enemy of God and humankind. The Devil is commonly associated with heretics, infidels, and other unbelievers. The Abrahamic religions have variously regarded the Devil as a rebellious fallen angel or demon that tempts humans to sin or commit evil deeds. Others regard the Devil as an allegory that represents a crisis of faith, individualism, free will, wisdom and enlightenment."/>
+    	<Grid.RowDefinitions>
+    		<RowDefinition Height="0.1*"/>
+    		<RowDefinition Height="0.9*"/>
+    	</Grid.RowDefinitions>
+    	<Rectangle Fill="#FFF4F4F5" Stroke="Black" Grid.RowSpan="2"/>
+    	<Grid>
+    		<Rectangle Fill="Black" Stroke="Black"/>
+    		<TextBlock TextWrapping="Wrap" Text="{Binding Name, Mode=OneWay}" FontWeight="Bold" FontSize="16" VerticalAlignment="Center" d:LayoutOverrides="HorizontalAlignment" HorizontalAlignment="Left" Margin="8,0,0,0" Foreground="White"/>
+    	</Grid>
+    	<Grid HorizontalAlignment="Left" Height="170" Margin="8,8,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130">
+    		<Rectangle Stroke="Black" Height="130" VerticalAlignment="Top" d:LayoutOverrides="GridBox">
+    			<Rectangle.Fill>
+    				<RadialGradientBrush>
+    					<GradientStop Color="White" Offset="0.6"/>
+    					<GradientStop Color="Black" Offset="1"/>
+    				</RadialGradientBrush>
+    			</Rectangle.Fill>
+    		</Rectangle>
+    		<HyperlinkButton Content="Play" HorizontalAlignment="Left" Foreground="Red" NavigateUri="{Binding GameUri, Mode=OneWay}" VerticalAlignment="Bottom" d:LayoutOverrides="GridBox"/>
+    		<HyperlinkButton x:Name="HowToPlayHyperlinkButton" Content="How to play" Margin="0,0,60,20" Foreground="Red" Click="HowToPlayHyperlinkButton_Click" VerticalAlignment="Bottom" d:LayoutOverrides="Width, GridBox" />
+    	</Grid>
+    	<ScrollViewer Margin="142,8,8,8" Grid.Row="1" d:LayoutOverrides="VerticalAlignment">
+    		<TextBlock TextWrapping="Wrap" Text="Color or colour (see spelling differences) is the visual perceptual property corresponding in humans to the categories called red, green, blue and others. Color derives from the spectrum of light (distribution of light energy versus wavelength) interacting in the eye with the spectral sensitivities of the light receptors. Color categories and physical specifications of color are also associated with objects, materials, light sources, etc., based on their physical properties such as light absorption, reflection, or emission spectra. By defining a color space, colors can be identified numerically by their coordinates."/>
     	</ScrollViewer>
 
     </Grid>
