--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Controls/MLNUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Controls/MLNUI.xaml
@@ -5,31 +5,35 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" x:Class="TheS.Casinova.MLN.Controls.MLNUI"
     mc:Ignorable="d"
-    d:DesignHeight="400" d:DesignWidth="600">
+    d:DesignHeight="200" d:DesignWidth="560">
     
     <Grid x:Name="LayoutRoot" Background="White">
 
-    	<Grid Height="104" VerticalAlignment="Top">
+    	<Grid Height="80" VerticalAlignment="Top">
     		<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
-    		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current bonus available:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold" FontSize="16"/>
-    		<TextBlock x:Name="CurrentBunusAvailable" HorizontalAlignment="Left" TextWrapping="Wrap" Text="CurrentBunusAvailable" VerticalAlignment="Top" Margin="233,8,0,0" FontSize="16"/>
+    		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current bonus available:" VerticalAlignment="Top" Margin="8,11,0,0" FontWeight="Bold"/>
+    		<TextBlock x:Name="CurrentBunusAvailable" HorizontalAlignment="Left" TextWrapping="Wrap" Text="CurrentBunusAvailable" VerticalAlignment="Top" Margin="164,11,0,0" d:LayoutOverrides="HorizontalAlignment"/>
             <Button x:Name="DepositButton" Content="Deposit" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,8,8,0" Click="DepositButton_Click" />
-    		<sdk:DataGrid x:Name="MLNInformation" Margin="8,36,8,7"/>
+    		<sdk:DataGrid x:Name="MLNInformation" Margin="8,34,8,9"/>
     	</Grid>
-    	<Grid Margin="0,108,0,0">
-    		<Rectangle Fill="White" Stroke="Black"/>
-    		<Image HorizontalAlignment="Left" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/mln.png" Stretch="None" Width="271" Margin="8,82,0,35"/>
-    		<Grid Margin="283,132,9,32">
-    			<Rectangle Fill="White" Stroke="Black" RadiusY="16" RadiusX="16" Margin="0"/>
-    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 1:" VerticalAlignment="Top" Margin="8,32,0,0" FontWeight="Bold"/>
-    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 2:" VerticalAlignment="Top" Margin="8,64,0,0" FontWeight="Bold"/>
-    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 3:" VerticalAlignment="Top" Margin="8,96,0,0" FontWeight="Bold"/>
-    			<TextBlock x:Name="MLNFirstLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNFirstLevel" VerticalAlignment="Top" Margin="61,32,0,0"/>
-    			<TextBlock x:Name="SecondLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="SecondLevel" VerticalAlignment="Top" Margin="61,64,0,0"/>
-    			<TextBlock x:Name="ThirdLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="ThirdLevel" VerticalAlignment="Top" Margin="61,96,0,0"/>
-    			<Button x:Name="FirstView" Content="View" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,29,8,0" Click="FirstView_Click" />
-                <Button x:Name="SecondView" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,61,8,0" VerticalAlignment="Top" Click="SecondView_Click" />
-                <Button x:Name="ThirdView" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,93,8,0" VerticalAlignment="Top" Click="ThirdView_Click" />
+    	<Grid Margin="0,84,0,0" d:LayoutOverrides="VerticalAlignment">
+    		<Grid.ColumnDefinitions>
+    			<ColumnDefinition Width="0.429*"/>
+    			<ColumnDefinition Width="0.571*"/>
+    		</Grid.ColumnDefinitions>
+    		<Rectangle Fill="White" Stroke="Black" Grid.ColumnSpan="2"/>
+    		<Image Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/mln.png" VerticalAlignment="Center" Height="100" HorizontalAlignment="Center"/>
+    		<Grid Width="300" Height="100" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+    			<Rectangle Fill="White" Stroke="Black" RadiusY="16" RadiusX="16"/>
+    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 1:" FontWeight="Bold" VerticalAlignment="Top" Margin="8,11,0,0"/>
+    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 2:" VerticalAlignment="Center" FontWeight="Bold" Margin="8,0,0,0"/>
+    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 3:" VerticalAlignment="Bottom" Margin="8,0,0,11" FontWeight="Bold"/>
+    			<TextBlock x:Name="MLNFirstLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNFirstLevel" VerticalAlignment="Top" Margin="61,11,0,0"/>
+    			<TextBlock x:Name="SecondLevel" TextWrapping="Wrap" Text="SecondLevel" HorizontalAlignment="Left" Width="86" VerticalAlignment="Center" Margin="61,0,0,0"/>
+    			<TextBlock x:Name="ThirdLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="ThirdLevel" VerticalAlignment="Bottom" Margin="61,0,0,11"/>
+    			<Button x:Name="FirstView" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,8,8,0" Click="FirstView_Click" VerticalAlignment="Top" />
+                <Button x:Name="SecondView" Content="View" HorizontalAlignment="Right" Width="75" VerticalAlignment="Center" Click="SecondView_Click" Margin="0,0,8,0" />
+                <Button x:Name="ThirdView" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,0,8,8" VerticalAlignment="Bottom" Click="ThirdView_Click" />
     		</Grid>
     	</Grid>
 
