--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Views/AnotherPlayerInformationWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Views/AnotherPlayerInformationWindow.xaml
@@ -12,29 +12,29 @@
         </Grid.RowDefinitions>
 
         <Button x:Name="CloseButton" Content="Close" Click="CancelButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
-
-    	<Grid Height="104" VerticalAlignment="Top" Margin="0">
-    		<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
-    		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current bonus available:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold" FontSize="16"/>
-    		<TextBlock x:Name="CurrentBunusAvailable" HorizontalAlignment="Left" TextWrapping="Wrap" Text="CurrentBunusAvailable" VerticalAlignment="Top" Margin="233,8,0,0" FontSize="16"/>
-    		<sdk:DataGrid x:Name="MLNInformation" Margin="8,36,8,7" FontSize="11"/>
-    	</Grid>
-    	<Grid Margin="0,108,0,0">
-    		<Rectangle Fill="White" Stroke="Black"/>
-    		<Grid HorizontalAlignment="Left" Margin="8,25,0,65" Width="271">
-    			<Image Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/mln.png" Stretch="None" Margin="0,27,0,0"/>
-    			<TextBlock x:Name="PlayerName" TextWrapping="Wrap" Text="PlayerName" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" TextAlignment="Center"/>
-    		</Grid>
-    		<Grid Margin="283,132,9,72">
-    			<Rectangle Fill="White" Stroke="Black" RadiusY="16" RadiusX="16"/>
-    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 1:" VerticalAlignment="Top" Margin="8,32,0,0" FontWeight="Bold" FontSize="11"/>
-    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 2:" Margin="8,64,0,68" FontWeight="Bold" FontSize="11" d:LayoutOverrides="Height"/>
-    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 3:" VerticalAlignment="Top" Margin="8,96,0,0" FontWeight="Bold" FontSize="11"/>
-    			<TextBlock x:Name="FirstLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="FirstLevel" VerticalAlignment="Top" Margin="61,32,0,0" FontSize="11"/>
-    			<TextBlock x:Name="SecondLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="SecondLevel" Margin="61,64,0,68" FontSize="11" d:LayoutOverrides="Height"/>
-    			<TextBlock x:Name="ThirdLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="ThirdLevel" VerticalAlignment="Top" Margin="61,96,0,0" FontSize="11"/>
-    		</Grid>
-    	</Grid>
+        <Grid Height="80" VerticalAlignment="Top">
+        	<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
+        	<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current bonus available:" VerticalAlignment="Top" Margin="8,11,0,0" FontWeight="Bold" FontSize="11"/>
+        	<TextBlock x:Name="CurrentBunusAvailable" HorizontalAlignment="Left" TextWrapping="Wrap" Text="CurrentBunusAvailable" VerticalAlignment="Top" Margin="164,11,0,0" FontSize="11"/>
+        	<sdk:DataGrid x:Name="MLNInformation" Margin="8,34,8,9" FontSize="11"/>
+        </Grid>
+        <Grid Margin="0,84,0,0" d:LayoutOverrides="VerticalAlignment">
+        	<Grid.ColumnDefinitions>
+        		<ColumnDefinition Width="0.424*"/>
+        		<ColumnDefinition Width="0.576*"/>
+        	</Grid.ColumnDefinitions>
+        	<Rectangle Fill="White" Stroke="Black" Grid.ColumnSpan="2"/>
+        	<Image Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/mln.png" VerticalAlignment="Center" Height="100" HorizontalAlignment="Center"/>
+        	<Grid Width="300" Height="100" d:LayoutOverrides="Height" VerticalAlignment="Center" Grid.Column="1" HorizontalAlignment="Center">
+        		<Rectangle Fill="White" Stroke="Black" RadiusY="16" RadiusX="16"/>
+        		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 1:" FontWeight="Bold" VerticalAlignment="Top" Margin="8,11,0,0" FontSize="11"/>
+        		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 2:" VerticalAlignment="Center" FontWeight="Bold" Margin="8,0,0,0" FontSize="11"/>
+        		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 3:" VerticalAlignment="Bottom" Margin="8,0,0,11" FontWeight="Bold" FontSize="11"/>
+        		<TextBlock x:Name="MLNFirstLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNFirstLevel" VerticalAlignment="Top" Margin="61,11,0,0" FontSize="11"/>
+        		<TextBlock x:Name="SecondLevel" TextWrapping="Wrap" Text="SecondLevel" HorizontalAlignment="Left" Width="86" VerticalAlignment="Center" Margin="61,0,0,0" FontSize="11"/>
+        		<TextBlock x:Name="ThirdLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="ThirdLevel" VerticalAlignment="Bottom" Margin="61,0,0,11" FontSize="11"/>
+        	</Grid>
+        </Grid>
 
     </Grid>
 </controls:ChildWindow>
