--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_MLN="clr-namespace:TheS.Casinova.MLN" xmlns:TheS_Casinova_MLN_Controls="clr-namespace:TheS.Casinova.MLN.Controls" mc:Ignorable="d" x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerWindow"
-           Width="600" Height="550" 
+           Width="600" Height="400" 
            Title="Account manager." FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
@@ -24,38 +24,38 @@
     		</sdk:TabItem>
     		<sdk:TabItem x:Name="Information" Header="Information">
     			<Grid>
-    				<Grid Height="83" VerticalAlignment="Top">
+    				<Grid Height="74" VerticalAlignment="Top">
     					<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
-    					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current totla:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold" FontSize="16"/>
-    					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Refundable:" Margin="8,35,0,32" FontWeight="Bold" d:LayoutOverrides="Height"/>
-    					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Non-refundable:" VerticalAlignment="Bottom" Margin="8,0,0,12" FontWeight="Bold"/>
-    					<TextBlock x:Name="InformationCurrentTotalTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationCurrentTotalTextBlock" VerticalAlignment="Top" Margin="134,8,0,0" FontSize="16"/>
-    					<TextBlock x:Name="InformationRefundableTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationRefundableTextBlock" Margin="86,35,0,32" d:LayoutOverrides="Height"/>
-    					<TextBlock x:Name="InformationNonrefundableTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationNonrefundableTextBlock" VerticalAlignment="Bottom" Margin="113,0,0,12"/>
-    					<Button x:Name="InformationCashbackButton" Content="Cashback" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,8,8" Click="InformationCashbackButton_Click" />
-    					<Button x:Name="InformationDepositButton" Content="Deposit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,87,8" Click="InformationDepositButton_Click" />
+    					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current totla:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold"/>
+    					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Refundable:" Margin="8,28,0,30" FontWeight="Bold" d:LayoutOverrides="Height"/>
+    					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Non-refundable:" VerticalAlignment="Bottom" Margin="8,0,0,10" FontWeight="Bold"/>
+    					<TextBlock x:Name="InformationCurrentTotalTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationCurrentTotalTextBlock" VerticalAlignment="Top" Margin="96,8,0,0"/>
+    					<TextBlock x:Name="InformationRefundableTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationRefundableTextBlock" Margin="86,28,0,30" d:LayoutOverrides="Height"/>
+    					<TextBlock x:Name="InformationNonrefundableTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationNonrefundableTextBlock" VerticalAlignment="Bottom" Margin="113,0,0,10"/>
+    					<Button x:Name="InformationCashbackButton" Content="Cashback" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,8,7" Click="InformationCashbackButton_Click" />
+    					<Button x:Name="InformationDepositButton" Content="Deposit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,87,7" Click="InformationDepositButton_Click" />
     				</Grid>
-    				<Grid Margin="0,87,0,0" Height="203" VerticalAlignment="Top">
+    				<Grid Margin="0,78,0,104">
     					<ContentPresenter x:Name="AccountInformationContentPresenter"/>
     				</Grid>
-    				<Grid Height="129" VerticalAlignment="Bottom">
-    					<sdk:TabControl>
+    				<Grid Height="100" VerticalAlignment="Bottom">
+    					<sdk:TabControl VerticalAlignment="Top">
     						<sdk:TabItem x:Name="InformationCreditCard" Header="Credits card">
     							<Grid Background="#FFE5E5E5">
     								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Card type:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold"/>
     								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Card number:" VerticalAlignment="Top" Margin="8,28,0,0" FontWeight="Bold"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Expire Date:" VerticalAlignment="Bottom" Margin="8,0,0,28" FontWeight="Bold"/>
+    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Expire Date:" VerticalAlignment="Top" Margin="8,48,0,0" FontWeight="Bold"/>
     								<TextBlock x:Name="InformationCreditCardCardTypeTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationCreditCardCardTypeTextBlock" VerticalAlignment="Top" Margin="76,8,0,0"/>
     								<TextBlock x:Name="InformationCreditCardCardNumberTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InfoNumberTextBlock" VerticalAlignment="Top" Margin="96,28,0,0"/>
-    								<TextBlock x:Name="InformationCreditCardExpireDateTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InfoExpireDateTextBlock" VerticalAlignment="Bottom" Margin="88,0,0,28"/>
-    								<TextBlock TextWrapping="Wrap" Text="Owner name:" VerticalAlignment="Top" Margin="252,28,257,0" FontWeight="Bold"/>
-    								<TextBlock TextWrapping="Wrap" Text="Card validation number:" VerticalAlignment="Bottom" Margin="252,0,190,28" FontWeight="Bold"/>
-    								<TextBlock x:Name="InformationCreditCardOwnerNameTextBlock" HorizontalAlignment="Right" TextWrapping="Wrap" Text="InfoCreditOwnerNameTextBlock" VerticalAlignment="Top" Margin="0,28,76,0" d:LayoutOverrides="HorizontalAlignment"/>
-    								<TextBlock x:Name="InformationCreditCardCardValidationNumberTextBlock" HorizontalAlignment="Right" TextWrapping="Wrap" Text="CardCardValidationNumberTB" VerticalAlignment="Bottom" Margin="0,0,21,28"/>
-    								<HyperlinkButton x:Name="InformationCreditsCardEditButton" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,8,8"/>
+    								<TextBlock x:Name="InformationCreditCardExpireDateTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InfoExpireDateTextBlock" VerticalAlignment="Top" Margin="88,48,0,0"/>
+    								<TextBlock TextWrapping="Wrap" Text="Owner name:" VerticalAlignment="Top" Margin="0,28,166,0" FontWeight="Bold" HorizontalAlignment="Right" d:LayoutOverrides="VerticalAlignment"/>
+    								<TextBlock TextWrapping="Wrap" Text="Card validation number:" Margin="0,48,96,0" FontWeight="Bold" HorizontalAlignment="Right" Width="153" VerticalAlignment="Top"/>
+    								<TextBlock x:Name="InformationCreditCardOwnerNameTextBlock" HorizontalAlignment="Right" TextWrapping="Wrap" Text="ICCON" VerticalAlignment="Top" Margin="0,28,125,0" d:LayoutOverrides="HorizontalAlignment"/>
+    								<TextBlock x:Name="InformationCreditCardCardValidationNumberTextBlock" HorizontalAlignment="Right" TextWrapping="Wrap" Text="ICCCVN" VerticalAlignment="Top" Margin="0,48,49,0"/>
+    								<HyperlinkButton x:Name="InformationCreditsCardEditButton" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,8,8,0"/>
     							</Grid>
     						</sdk:TabItem>
-    						<sdk:TabItem x:Name="InformationOther" Header="Other">
+    						<sdk:TabItem x:Name="InformationOther" Header="Other" Margin="-4,0,4,0">
     							<Grid Background="#FFE5E5E5">
     								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Card type:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold"/>
     								<TextBlock x:Name="InformationOtherCardTypeTextBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="InformationOtherCardTypeTextBlock" VerticalAlignment="Top" Margin="76,8,0,0"/>
