--- a/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/SupportContent/Views/AboutUsWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/SupportContent/Views/AboutUsWindow.xaml
@@ -1,9 +1,9 @@
-﻿<controls:ChildWindow x:Class="TheS.Casinova.SupportContent.Views.AbountUsWindow"
+﻿<controls:ChildWindow x:Class="TheS.Casinova.SupportContent.Views.AboutUsWindow"
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
            Width="600" Height="400" 
-           Title="Abount us" FontSize="21.333">
+           Title="Abount us." FontSize="21.333">
     <Grid Name="LayoutRoot">
         <Grid.RowDefinitions>
             <RowDefinition />
