--- a/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/SupportContent/Views/PolicyWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/SupportContent/Views/PolicyWindow.xaml
@@ -3,7 +3,7 @@
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
            Width="600" Height="400" 
-           Title="Policy" FontSize="21.333">
+           Title="Policy." FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition />
