--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Views/AnotherPlayerInformationWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Views/AnotherPlayerInformationWindow.xaml
@@ -1,10 +1,16 @@
-﻿<controls:ChildWindow
+﻿<sdk:ChildWindow
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.MLN.Views.AnotherPlayerInformationWindow"
+           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:TheS_Casinova_MLN_ViewModels="clr-namespace:TheS.Casinova.MLN.ViewModels" mc:Ignorable="d" x:Class="TheS.Casinova.MLN.Views.AnotherPlayerInformationWindow"
            Width="600" Height="400" 
            Title="Another player information" FontSize="21.333">
+	<sdk:ChildWindow.Resources>
+		<TheS_Casinova_MLN_ViewModels:AnotherPlayerInformationModel x:Key="AnotherPlayerInformationModelDataSource" d:IsDataSource="True"/>
+	</sdk:ChildWindow.Resources>
+	<sdk:ChildWindow.DataContext>
+		<Binding Source="{StaticResource AnotherPlayerInformationModelDataSource}"/>
+	</sdk:ChildWindow.DataContext>
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -15,8 +21,8 @@
         <Grid Height="80" VerticalAlignment="Top">
         	<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
         	<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current bonus available:" VerticalAlignment="Top" Margin="8,11,0,0" FontWeight="Bold" FontSize="11"/>
-        	<TextBlock x:Name="CurrentBunusAvailable" HorizontalAlignment="Left" TextWrapping="Wrap" Text="CurrentBunusAvailable" VerticalAlignment="Top" Margin="164,11,0,0" FontSize="11"/>
-        	<sdk:DataGrid x:Name="MLNInformation" Margin="8,34,8,9" FontSize="11"/>
+        	<TextBlock x:Name="CurrentBunusAvailable" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding CurrentBunusAvailable}" VerticalAlignment="Top" Margin="164,11,0,0" FontSize="11"/>
+        	<sdk:DataGrid x:Name="Informations" Margin="8,34,8,9" FontSize="11" DataContext="{Binding Informations}"/>
         </Grid>
         <Grid Margin="0,84,0,0" d:LayoutOverrides="VerticalAlignment">
         	<Grid.ColumnDefinitions>
@@ -30,11 +36,11 @@
         		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 1:" FontWeight="Bold" VerticalAlignment="Top" Margin="8,11,0,0" FontSize="11"/>
         		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 2:" VerticalAlignment="Center" FontWeight="Bold" Margin="8,0,0,0" FontSize="11"/>
         		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Level 3:" VerticalAlignment="Bottom" Margin="8,0,0,11" FontWeight="Bold" FontSize="11"/>
-        		<TextBlock x:Name="MLNFirstLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNFirstLevel" VerticalAlignment="Top" Margin="61,11,0,0" FontSize="11"/>
-        		<TextBlock x:Name="SecondLevel" TextWrapping="Wrap" Text="SecondLevel" HorizontalAlignment="Left" Width="86" VerticalAlignment="Center" Margin="61,0,0,0" FontSize="11"/>
-        		<TextBlock x:Name="ThirdLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="ThirdLevel" VerticalAlignment="Bottom" Margin="61,0,0,11" FontSize="11"/>
+        		<TextBlock x:Name="FirstLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding FirstLevel}" VerticalAlignment="Top" Margin="61,11,0,0" FontSize="11"/>
+        		<TextBlock x:Name="SecondLevel" TextWrapping="Wrap" Text="{Binding SecondLevel}" HorizontalAlignment="Left" Width="86" VerticalAlignment="Center" Margin="61,0,0,0" FontSize="11"/>
+        		<TextBlock x:Name="ThirdLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding ThirdLevel}" VerticalAlignment="Bottom" Margin="61,0,0,11" FontSize="11"/>
         	</Grid>
         </Grid>
 
     </Grid>
-</controls:ChildWindow>
+</sdk:ChildWindow>
