--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Controls/GameInformationsUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Controls/GameInformationsUI.xaml
@@ -25,19 +25,24 @@
     		<TextBlock TextWrapping="Wrap" Text="{Binding Name, Mode=OneWay}" FontWeight="Bold" FontSize="16" VerticalAlignment="Center" d:LayoutOverrides="HorizontalAlignment" HorizontalAlignment="Left" Margin="8,0,0,0" Foreground="White"/>
     	</Grid>
     	<Grid HorizontalAlignment="Left" Height="170" Margin="8,8,0,0" Grid.Row="1" VerticalAlignment="Top" Width="130">
-    		<Rectangle Stroke="Black" Height="130" VerticalAlignment="Top" d:LayoutOverrides="GridBox">
-    			<Rectangle.Fill>
-    				<RadialGradientBrush>
-    					<GradientStop Color="#FFFFCFCF" Offset="0.6"/>
-    					<GradientStop Color="#FF1F7A00" Offset="1"/>
-    				</RadialGradientBrush>
-    			</Rectangle.Fill>
-    		</Rectangle>
     		<HyperlinkButton Content="Play" HorizontalAlignment="Left" Foreground="Red" NavigateUri="{Binding GameUri, Mode=OneWay}" VerticalAlignment="Bottom" d:LayoutOverrides="GridBox"/>
     		<HyperlinkButton x:Name="HowToPlayHyperlinkButton" Content="How to play" Margin="0,0,60,20" Foreground="Red" Click="HowToPlayHyperlinkButton_Click" VerticalAlignment="Bottom" d:LayoutOverrides="Width, GridBox" />
+    		<Image Width="130" Height="130" VerticalAlignment="Top" Source="/TheS.Casinova.TwoWins.Silverlight;component/TwoWins/Assets/Images/Logo.png" Stretch="Fill"/>
     	</Grid>
-    	<ScrollViewer Margin="142,8,8,8" Grid.Row="1" d:LayoutOverrides="VerticalAlignment">
-    		<TextBlock TextWrapping="Wrap" Text="Color or colour (see spelling differences) is the visual perceptual property corresponding in humans to the categories called red, green, blue and others. Color derives from the spectrum of light (distribution of light energy versus wavelength) interacting in the eye with the spectral sensitivities of the light receptors. Color categories and physical specifications of color are also associated with objects, materials, light sources, etc., based on their physical properties such as light absorption, reflection, or emission spectra. By defining a color space, colors can be identified numerically by their coordinates."/>
-    	</ScrollViewer>
+    	<RichTextBox Margin="142,8,8,8" Grid.Row="1">
+    		<Paragraph>
+    			<Run Text="Game: Two Wins" FontWeight="Bold" FontSize="12"/>
+<LineBreak/>
+<LineBreak/>
+<Run Text="Standard Rules" FontWeight="Bold"/><LineBreak/>
+- Each game period last 12 hours, with 1 hour "Critical Time Period" during the last hour.<LineBreak/>
+- Each player has an infinite number of hands on which to place their bets. For each hand, players may place any number of whole-dollar bets.<LineBreak/>
+- Players may increase the amount of the bet in any of their hands as many times as they want, at any time before the critical time period occurs.<LineBreak/>
+- Players may neither decrease nor withdraw the amount of a bet in any of their hands during gameplay.<LineBreak/>
+- The bets each player places will be updated in the Main Pot in real time.<LineBreak/>
+- During a "Critical Time Period," each player may only update each of their hands once.<LineBreak/>
+* The bets on new hands within the "Critical Time Period" will not be available until the "critical time period" elapses.<LineBreak/> 		
+			</Paragraph>
+    	</RichTextBox>
     </Grid>
 </UserControl>
