commit การเพิ่มรายละเอียดของเมนู scholarship,club,game,และการเพิ่ม sidebar ต่าง ๆ

--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -101,8 +101,8 @@
                 <div id="avatar-container">
                     <div class="avatar-bar">
                         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2"
-                            width="167px" height="238px">
-                            <param name="source" value="/xap/Avatar_Silver.xap" />
+                            width="200px" height="210px">
+                            <param name="source" value="/xap/avatar.xap" />
                             <param name="onerror" value="onSilverlightError" />
                             <param name="minRuntimeVersion" value="2.0.31005.0" />
                             <param name="autoUpgrade" value="true" />
@@ -114,7 +114,7 @@
                     </div>
                     <div class="doyouknow-bar">
                         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2"
-                            width="200px" height="260px">
+                            width="200px" height="245px">
                             <param name="source" value="/xap/doyouknow.xap" />
                             <param name="onerror" value="onSilverlightError" />
                             <param name="minRuntimeVersion" value="2.0.31005.0" />
